syntax = "proto3";

package tx;

option go_package = "github.com/cosmos/ibc-go/tx-cardano";

message SignAndSubmitTxRequest {
  string chain_id = 1;
  bytes transaction_hex_string = 2;
}

message SignAndSubmitTxResponse {
  string transaction_id = 1;
}

service TransactionService {
  rpc SignAndSubmitTx(SignAndSubmitTxRequest) returns (SignAndSubmitTxResponse) {};
}
